# remix

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  manifest.json  pyproject.toml  setup.cfg  setup.py
src/remix/: __init__.py  __main__.py  builder.py  cli.py  interfaces.py  llm_analyzer.py  null_plugins.py  planning.py  profiles.py  runtime.py  sources.py  utils.py  verification.py  workspace.py
tests/: __init__.py  test_all_profiles.py  test_github_repo_source.py  test_standalone.py  test_support.py
tests/integration/: __init__.py  test_remix_runtime.py
