[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remix"
version = "0.2.0"
description = "Universal artifact reconstruction and synthesis system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.0",
]

[project.optional-dependencies]
evolution = ["skill-se-kit>=0.1.0"]

[project.scripts]
remix = "remix.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
