[metadata]
name = remix
version = 0.2.0
description = Universal artifact reconstruction and synthesis system

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jsonschema>=4.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    remix = remix.cli:main
